# dvc-example

./: .env  .env.dvc  .gitignore  Makefile  README.md  dvc.yaml  pyproject.toml
.dvc/: config
configs/: train_config.yml
data/initial_data/: .gitignore  initial_data.csv  initial_data.csv.dvc  target.csv  target.csv.dvc
data/prepared_data/: .gitignore  prepared_data.csv  prepared_data.csv.dvc
dvclive/: metrics.json  params.yaml  report.html
dvclive/plots/metrics/: test_MSE.tsv  train_MSE.tsv  validation_MSE.tsv
models/: .gitignore  linear_model.pickle.dvc
src/data/: data_download.py  data_prepare.py
src/models/: model_train.py
